# ofxstatement-schwab-json

./: .gitignore  Makefile  Pipfile  README.md  README.rst  pyproject.toml
src/ofxstatement_schwab_json/: plugin.py
tests/: sample-statement.json  test_sample.py  test_statement.py
