[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-schwab-json"
version = "0.6.0"
authors = [
  { name="Ed Wagner", email="ed@edwagner.org" },
]
description = "ofxstatement plugin for Schwab JSON exports"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "schwab", "json"]
dependencies = [
  "ofxstatement",
]

[project.urls]
Homepage = "https://github.com/edwagner/ofxstatement-schwab-json/"

[project.entry-points."ofxstatement"]
schwab_json = "ofxstatement_schwab_json.plugin:SchwabJsonPlugin"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
